--- a/fileScan/src/main/resources/file.html
+++ b/fileScan/src/main/resources/file.html
@@ -44,6 +44,19 @@
             color: #ccc;
             background-color: #007bffdb;
         }
+        .empty_data {
+            padding: 0px;
+            margin: 0px;
+            border: 0px;
+            border-radius: 5px;
+            width: calc(100% - 0px);
+            text-align: center;
+            font-size: 48px;
+            font-weight: bolder;
+            color: #AAA;
+            padding-top: calc(25% - 70px);
+            padding-bottom: calc(25% - 70px);
+        }
     </style>
     <script>
         function clipboardForUri(uri){
