修复linux平台文件导航栏异常的问题

--- a/fileScan/src/main/resources/file.html
+++ b/fileScan/src/main/resources/file.html
@@ -14,7 +14,9 @@
         a:active {color: red; }
         a:visited {color:purple;text-decoration:none;}
         a:hover {color: red; text-decoration:underline;}
-        div:hover {background-color: antiquewhite;}
+        div:hover {
+            background-image: linear-gradient(to right, rgba(247, 237, 150, 0.2), rgba(247, 237, 150, 0.5), rgba(247, 237, 150, 0.2));
+        }
         div {
             width: calc(100% - 40px);
             padding: 10px 20px;
