--- a/fileScan/src/main/resources/file.html
+++ b/fileScan/src/main/resources/file.html
@@ -6,6 +6,7 @@
     <style>
         h1 {font-size: 24px;}
         h2 {font-size: 20px;}
+        h4 {font-size: 12px; color: #AAA; font-weight: 200;}
         a {
             font-size: 14;
             color: coral;
@@ -21,6 +22,7 @@
             width: calc(100% - 40px);
             padding: 10px 20px;
             border-radius: 5px;
+            text-align: center;
         }
         hr {
             padding: 0px;
