--- a/fileScan/src/main/resources/file.html
+++ b/fileScan/src/main/resources/file.html
@@ -316,6 +316,26 @@
     </script>
 </head>
 <body onload="pageLoaded()">
+    <div class="search_bar" style="visibility: hidden;">
+        <div class="search_bar_item">
+            <div>文件名:</div>
+            <div><input type="text" placeholder="请输入文件名"></div>
+        </div>
+        <div class="search_bar_split_tag"></div>
+        <div class="search_bar_item">
+            <div>排序方式:</div>
+            <div style="display: flex;">
+                <input type="radio" id="file_defaul_order1" name="fileOrder1" value="0" checked><label style="min-width: 16px;" for="file_defaul_order">默认</label>
+                <input type="radio" id="file_create_time_asc1" name="fileOrder1" value="1"><label for="file_create_time_asc1">创建时间增序</label>
+                <input type="radio" id="file_create_time_desc1" name="fileOrder1" value="2"><label for="file_create_time_desc1">创建时间降序</label>
+                <input type="radio" id="file_update_time_asc1" name="fileOrder1" value="3"><label for="file_update_time_asc1">更新时间增序</label>
+                <input type="radio" id="file_update_time_desc1" name="fileOrder1" value="4"><label for="file_update_time_desc1">更新时间降序</label>
+            </div>
+        </div>
+        <div class="search_bar_split_tag"></div>
+        <input type="submit" value="查询">
+        <input type="reset" value="重置">
+    </div>
     <div class="navigation_bar">
         <form name="auth" action="#" onsubmit="return onSubmitSearch()" method="get">
             <div class="search_bar">
@@ -341,7 +361,6 @@
         </form>
         ${navigation_bar}
     </div>
-    <div style="width:100%; height: 65px;"></div>
     ${body}
 </body>
 </html>
